--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,14 @@
 ---
+import Layout from '@layouts/Layout.astro';
+import Tower from '@components/Tower/Tower.astro';
 
+const title = 'F1 Timing Tower';
+const description = 'A recreation of the Forumla 1 information graphic that appears on TV, built using basic web technologies.';
 ---
-
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Layout title={title} description={description} class="bg-zinc-200 p-4">
+  <Tower
+    currentLap={5}
+    totalLaps={57}
+    class="my-8"
+    status="green" />
+</Layout>
