--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -25,7 +25,7 @@
 
 @font-face {
     font-family: 'Formula1';
-    src: url('fonts/Formula1-Regular.otf') format('opentype');
+    src: url('/formula-one-tower/fonts/Formula1-Regular.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -33,7 +33,7 @@
 
 @font-face {
     font-family: 'Formula1';
-    src: url('fonts/Formula1-Bold.otf') format('opentype');
+    src: url('/formula-one-tower/fonts/Formula1-Bold.otf') format('opentype');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -41,7 +41,7 @@
 
 @font-face {
     font-family: 'Formula1';
-    src: url('fonts/Formula1-Wide.otf') format('opentype');
+    src: url('/formula-one-tower/fonts/Formula1-Wide.otf') format('opentype');
     font-weight: normal;
     font-style: italic;
     font-display: swap;
