--- a/src/components/Manufacturer.astro
+++ b/src/components/Manufacturer.astro
@@ -6,8 +6,8 @@ interface Props {
   class?: string;
 }
 
-import McLaren from '../assets/svg/teams/mclaren.svg';
-import Mercedes from '../assets/svg/teams/mercedes.svg';
+// import McLaren from '../assets/svg/teams/mclaren.svg';
+// import Mercedes from '../assets/svg/teams/mercedes.svg';
 
 const { manufacturer, class: className = '' } = Astro.props;
 ---
